--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
-language: ruby
-rvm:
-  - 2.2
-before_install:
-  - echo "BEFORE INSTALL START"
-  - gem install bundler
-  - echo "BEFORE INSTALL END"
+sudo: false
+
+language: python
+
+python:
+  - 2.7
+
+install:
+  - pip install codecov
+
+script:
+  - coverage run tests.py
+
+after_success:
+  - codecov
